crates/uitest/fixtures/ty_check/payable_unknown_attr_on_init_recv.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/payable_unknown_attr_on_init_recv.fe
---
error[12-0004]: unsupported `#[payble]` attribute on init block
  ┌─ payable_unknown_attr_on_init_recv.fe:6:5
  │
6 │     #[payble]
  │     ^^^^^^^^^ expected `#[payable]`

error[12-0004]: unsupported `#[bar]` attribute on recv block
   ┌─ payable_unknown_attr_on_init_recv.fe:11:5
   │
11 │     #[bar]
   │     ^^^^^^ expected no attributes

error[12-0004]: unsupported `#[foo]` attribute on recv arm
   ┌─ payable_unknown_attr_on_init_recv.fe:13:9
   │
13 │         #[foo]
   │         ^^^^^^ expected `#[payable]`

error[8-0012]: undefined variable
  ┌─ payable_unknown_attr_on_init_recv.fe:8:9
  │
8 │         store.value = 0
  │         ^^^^^ undefined variable `store`
